# reversibleInterpreter

./: .gitignore  LICENSE  README.md  reversibleInterpreter.cabal  rules.txt
app/: .Main.hs.swp  Main.hs  interpreterStart.hs
progs/: factorial10_formated.cs  progSimple.cs
