name:                reversibleInterpreter
version:             0.1.0.0
synopsis:            Simple interpreter with debugger and Ctr-Z ability
description:         Please see README.md
homepage:            https://github.com/HugoDelval/reversibleInterpreter#readme
license:             BSD3
license-file:        LICENSE
author:              Hugo DELVAL
maintainer:          hugodelval@gmail.com
copyright:           2017 Hugo DELVAL
category:            Interpreter
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable reversibleInterpreter-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , reversibleInterpreter
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/HugoDelval/reversibleInterpreter
